# clickfile

./: .env  .flake8  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
clickfile/: asgi.py  settings.py  urls.py  wsgi.py
contrib/: .env-sample
filesystem/: admin.py  mixins.py  models.py  serializers.py  services.py  urls.py  views.py
filesystem/management/commands/: ls.py  mkdir.py  rm.py
filesystem/migrations/: 0001_initial.py
filesystem/tests/: test_models.py  test_services.py
